Removed hardcoded API key and replaced with environment variable

--- a/mysql-ai-agent/main.ipynb
+++ b/mysql-ai-agent/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "81e047fa",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,8 @@
     "from langchain_core.runnables import RunnablePassthrough\n",
     "from langchain_openai import ChatOpenAI\n",
     "import os\n",
-    "os.environ['OPENAI_API_KEY']='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'"
+    "# Load OpenAI API key from environment variable\n",
+    "openai_api_key = os.getenv('OPENAI_API_KEY')"
    ]
   },
   {
@@ -57,12 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "a8a25624",
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_uri = 'mysql+mysqlconnector://root:SwarnaVishal%4027@localhost:3306/chinook'\n",
+    "db_uri = 'mysql+mysqlconnector://root:{password}@localhost:3306/chinook'\n",
     "db = SQLDatabase.from_uri(db_uri)\n"
    ]
   },
